--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/opengov/bootstrap/css/bootstrap.min.css">
   <style>
     td{
 		width:50px;
