--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		width:auto!important;
 	}
 	.next {
-	  background-color:red!important!
+	  background-color:red!important;
 	}
   </style>
   <!--[if lt IE 9]>
