--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 	      $("#tr"+currentRow).append($('<td />', {class: 'success', row:currentRow, col:i%no, text: item}));	  
 	    }
 	  );
-      $("td[col="+(no-2)+"][row="+(no-2)+"]").removeClass().addClass("next");
+	  $("td[col="+(no-1)+"][row="+(no-2)+"]").removeClass().addClass("next");
+	  $("td[col="+(no-2)+"][row="+(no-1)+"]").removeClass().addClass("next");
+	  $("td[col="+(no-1)+"][row="+(no)+"]").removeClass().addClass("next");
+	  $("td[col="+(no)+"][row="+(no-1)+"]").removeClass().addClass("next");
     }
     function shuffle(array) {
       var currentIndex = array.length, temporaryValue, randomIndex;
