--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {class: 'success', row:currentRow, col:i%no, text: item}));	  
+		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {text:item}));
 	    }
 	  );
 	  $("td[col="+(no-1)+"][row="+(no-2)+"]").removeClass().addClass("next");
