--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		  currentRow = Math.floor(i/no);
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
-	      $("#tr"+currentRow).append($('<td />', {class: 'success', row:currentRow, col:i%no, text: item}));	  
+	      $("#tr"+currentRow).append($('<td />', {class: 'success', row:currentRow, col:i%no}));	  
 		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {text:item}));
 	    }
 	  );
