--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
-		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'button success', text:item}));
+		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success', text:item}));
 	    }
 	  );
 	  $("td[col="+(no-1)+"][row="+(no-2)+"]").removeClass().addClass("next");
