--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		width:auto!important;
 	}
 	.next {
-	  background-color:red!important;
-	  cursor: pointer;
+	  height:100%;
+	  width:100%;
 	}
   </style>
   <!--[if lt IE 9]>
@@ -87,13 +87,13 @@
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
-		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success', text:item}));
+		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item}));
 	    }
 	  );
-	  $("td[col="+(no-1)+"][row="+(no-2)+"] button").removeClass("btn-success").addClass("btn-primary");
-	  $("td[col="+(no-2)+"][row="+(no-1)+"] button").removeClass("btn-success").addClass("btn-primary");
-	  $("td[col="+(no-1)+"][row="+(no)+"] button").removeClass("btn-success").addClass("btn-primary");
-	  $("td[col="+(no)+"][row="+(no-1)+"] button").removeClass("btn-success").addClass("btn-primary");
+	  $("td[col="+(no-1)+"][row="+(no-2)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next");
+	  $("td[col="+(no-2)+"][row="+(no-1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next");
+	  $("td[col="+(no-1)+"][row="+(no)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next");
+	  $("td[col="+(no)+"][row="+(no-1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next");
     }
     function shuffle(array) {
       var currentIndex = array.length, temporaryValue, randomIndex;
