--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item}));
 	    }
 	  );
-	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no}));
+	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no-1}));
 	  $("td[col="+(no-1)+"][row="+(no-2)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
 	  $("td[col="+(no-2)+"][row="+(no-1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
 	  $("td[col="+(no-1)+"][row="+(no)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
