--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 	function clickme(){
 	  var row=$(this).parent().attr("row");
 	  var col=$(this).parent().attr("col");
-	  var element = $(this).detach();
-	  $("td[col="+empty.col+"][row="+empty.row+"]").append(elemend);
+	  var element = $(this).detach().appendTo($("td[col="+empty.col+"][row="+empty.row+"]"));
 	  empty.col = col;
 	  empty.row = row;
 	}
