--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
 	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
 	}
+	function unfixnear(){
+	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
+	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
+	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
+	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
+	}	
 	function clickme(){
 	  var row=$(this).parent().attr("row");
 	  var col=$(this).parent().attr("col");
