--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
 	}	
 	function clickme(){
+	  unfixnear();
 	  var row=$(this).parent().attr("row");
 	  var col=$(this).parent().attr("col");
 	  var element = $(this).detach().appendTo($("td[col="+empty.col+"][row="+empty.row+"]"));
