--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 	  fixnear();
     }
 	function fixnear(){
-	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
-	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
-	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
-	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").addClass("next").bind("click", clickme);
+	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
+	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").removeClass("btn-success").addClass("btn-primary").bind("click", clickme);
 	}
 	function unfixnear(){
-	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
-	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
-	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
-	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").removeClass("next").unbind("click");
+	  $("td[col="+(empty.col)+"][row="+(empty.row-1)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col-1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
+	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
 	}	
 	function clickme(){
 	  unfixnear();
