--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            j;
 	  empty.col = no - 1;
 	  empty.row = no - 1;
-	  $("#puzzletable ")
+	  /*$("#puzzletable ")
       switch (no){
         case 1:
                 col = 4;
@@ -70,7 +70,7 @@
         case 6:
                col = 2;
                 break;
-      }
+      }*/
       tiles = [];
        $("#puzzle").html("");
       for (i = 0; i < no; i++){
