--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
-		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item}));
+		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item+1}));
 	    }
 	  );
 	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no-1}));
