--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <button class="btn btn-primary" onclick="mix()">Ανακάτεψε</button>
   <div id="puzzle" class="container">
   </div>
+  <?php 
+echo "test php";
+?>
   <script src="/opengov/jquery/jquery.min.js"></script>
   <script>
     var tiles = [];
