--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
 <body>
   <select id="selectno" onchange="mix();">
-    <option>1</option>
     <option>2</option>
-    <option>3</option>
+    <option selected>3</option>
     <option>4</option>
     <option>5</option>
     <option>6</option>
