--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <select id="selectno" onchange="mix();">
     <option>2</option>
-    <option selected>3</option>
+    <option selected="selected">3</option>
     <option>4</option>
     <option>5</option>
     <option>6</option>
