--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>N-puzzle Solver</title>
+  <meta name="description" content="N-puzzle solver">
+  <meta name="author" content="Manolis Mimilidis">
 
   <link rel="stylesheet" href="/opengov/bootstrap/css/bootstrap.min.css">
   <style>
