--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     margin-left:auto; 
     margin-right:auto;
   }
+  body {text-align:center;}
   </style>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
