--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </select>
   <button class="btn btn-primary" onclick="mix()">Ανακάτεψε</button>
   <div id="puzzle" class="container">
-  <div id="info"></div>
+  <div id="info">TEST</div>
   </div>
   <?php 
 echo "test php";
