--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
   <script src="/opengov/jquery/jquery.min.js"></script>
   <script>
     var tiles = [];
-	var empty = {col:0,row:0};
+	var empty = {col:1,row:1};
     function mix(){
       var no = $("#selectno").val(),
          col = 1,
            i,
            j;
-	  empty.col = no - 1;
-	  empty.row = no - 1;
+	  empty.col = no;
+	  empty.row = no;
 
       tiles = [];
        $("#puzzle").html("");
-      for (i = 0; i < no; i++){
-        for(j = 0; (j < no-1) || (j==no-1 && i<no-1); j++){
+      for (i = 1; i <= no; i++){
+        for(j = 1; (j <= no-1) || (j==no && i<no); j++){
           tiles.push(i * no + j);
         }
       }
@@ -73,14 +73,14 @@
 	  $("#puzzle").append($('<table />', {id:'puzzletable', class:"table table-condensed table-responsive table-bordered text-center center"}));
 	  $("#puzzletable").append($('<tbody/>'));
 	  $.each(tiles, function(i, item){
-		  currentRow = Math.floor(i/no);
-		  if (i%no === 0)
+		  currentRow = Math.floor((i-1)/no);
+		  if ((i-1)%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
-		  $("td[col="+(i%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item+1	}));
+		  $("td[col="+((i-1)%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item	}));
 	    }
 	  );
-	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no-1}));
+	  $("#tr"+currentRow).append($('<td />', {row:currentRow, col:no}));
 	  fixnear();
     }
 	function fixnear(){
