--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
   </select>
   <button class="btn btn-primary" onclick="mix()">Ανακάτεψε</button>
   <div id="puzzle" class="container">
-  </div>
   <div id="info">TEST</div>
+  </div>
+  <?php 
+echo "test php";
+?>
   <script src="/opengov/jquery/jquery.min.js"></script>
   <script>
     var tiles = [];
