--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ echo "test php";
 		  currentRow = Math.floor((i-1)/no);
 		  if ((i-1)%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
-	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
+	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:(i-1)%no}));	  
 		  $("td[col="+((i-1)%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item	}));
 	    }
 	  );
