--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ echo "test php";
 	  $("#puzzle").append($('<table />', {id:'puzzletable', class:"table table-condensed table-responsive table-bordered text-center center"}));
 	  $("#puzzletable").append($('<tbody/>'));
 	  $.each(tiles, function(i, item){
-		  currentRow = Math.floor((i-1)/no);
+		  currentRow = Math.floor(i/no);
 		  if ((i-1)%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
 	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:(i-1)%no}));	  
