--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <option>10</option>
   </select>
   <button class="btn btn-primary" onclick="mix()">Ανακάτεψε</button>
-  <div id="puzzle" class="container">
+  <div id="puzzle" class="container"></div>
   <div id="info">TEST</div>
-  </div>
   <?php 
 echo "test php";
 ?>
