--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@ echo "test php";
 	  $("td[col="+(empty.col)+"][row="+(empty.row+1)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
 	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
 	}	
+	function manhattan(){
+	  #("#puzzletable td").each(function(i, item){
+	     alert(i);
+		 alert(item);
+	  });
+	}
 	function clickme(){
 	  unfixnear();
 	  var row=$(this).parent().attr("row");
