--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ echo "test php";
 	  $("td[col="+(empty.col+1)+"][row="+(empty.row)+"] button").addClass("btn-success").removeClass("btn-primary").unbind("click");
 	}	
 	function manhattan(){
-	  #("#puzzletable td").each(function(i, item){
+	  $("#puzzletable td").each(function(i, item){
 	     alert(i);
 		 alert(item);
 	  });
