--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ echo "test php";
 	function manhattan(){
 	  $("#puzzletable td button").each(function(i, item){
 	     alert(i);
-		 alert(item);
+		 alert(item.text());
 	  });
 	}
 	function clickme(){
