--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ echo "test php";
 		  currentRow = Math.floor(i/no)+1;
 		  if (i%no === 0)
 			  $("#puzzletable>tbody:last").append($('<tr />', {id:'tr'+currentRow}));
-	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:i%no}));	  
+	      $("#tr"+currentRow).append($('<td />', {row:currentRow, col:(i%no)+1}));	  
 		  $("td[col="+((i-1)%no)+"][row="+currentRow+"]").append($('<button />', {class: 'btn btn-success next', text:item	}));
 	    }
 	  );
