--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@ echo "test php";
         }
       }
 	    
-      shuffle(tiles);
+      //shuffle(tiles);
 	  var currentRow;
 	  $("#puzzle").append($('<table />', {id:'puzzletable', class:"table table-condensed table-responsive table-bordered text-center center"}));
 	  $("#puzzletable").append($('<tbody/>'));
