--- a/index2.html
+++ b/index2.html
@@ -73,7 +73,7 @@ echo "test php";
 	    tiles[i]=new Array();
         for(j = 0; j <= no-1 ; j++){
 		  if (!((i==no)&&(j==no)))
-            tiles[i][j] = (i-1) * no + j;
+            tiles[i][j] = i * no + j + 1;
         }
       }
 	    
