--- a/puzzle.html
+++ b/puzzle.html
@@ -20,10 +20,7 @@
 <div id="game_area"></div>
 
 <!-- java scripts --> 
-<script
-			  src="http://code.jquery.com/jquery-3.2.1.min.js"
-			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-			  crossorigin="anonymous"></script>
+<script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/puzzle_dg.min.js"></script> 
 <script type="text/javascript">$(window).load(function(){
     $('#game_area').puzzle_dg(60);
