--- a/puzzle.html
+++ b/puzzle.html
@@ -21,7 +21,7 @@
 
 <!-- java scripts --> 
 <script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/puzzle_dg.min.js"></script> 
+<script src="js/puzzle-dg.min.js"></script> 
 <script type="text/javascript">$(window).load(function(){
     $('#game_area').puzzle_dg(60);
 });</script>
